# db-werkstatt-planer

./: .gitignore  main.py  readme.md  requirements.txt
backend-server/: Cargo.toml  Plannung.drawio  Rocket.toml
backend-server/src/: main.rs
backend-server/src/db/: connection.rs  models.rs
backend-server/src/models/: users.rs
backend-server/src/routes/: auth.rs  mod.rs  users.rs
frontend-client/src/: index.html  login.html  main.js  registrieren.html  styles.css
frontend-client/src-tauri/: Cargo.toml  tauri.conf.json
frontend-client/src-tauri/capabilities/: default.json
frontend-client/src-tauri/src/: lib.rs
frontend-client/src/components/: footer.html  header.html  sidebar.html
frontend-client/src/js/: loader.js  main.js
frontend-client/ui/: index.html
src/: DBManager.py  custom_logging.py
src/routs/: user.py
