[package]
name = "backend-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6"
serde = "1.0.228"
serde_json = "1.0.151"
surrealdb = { version = "3.2.1", features = ["kv-rocksdb"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
